--- a/index.Rmd
+++ b/index.Rmd
@@ -1,15 +1,6 @@
----
-title: "Amy Yeung's website"
-author: "Amy Yeung"
-date: "2022-10-27"
-output: 
-  html_document:
-    toc: true
-    toc_float: true
----
-
 ## Welcome!
 
+Hello! I am Amy Yeung, a second-year MPH candidate at Columbia University.
 
 
 
