--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "Home"
+title: "Amy Yeung's Website"
 ---
 
-## Welcome!
+
 <p style="text-align:center;"><img src="images/headshot.jpg" style="width:30%"></p>
+
 
 Hello! I am Amy Yeung, a second-year MPH candidate at Columbia University.
 
