--- a/resume.Rmd
+++ b/resume.Rmd
@@ -2,6 +2,8 @@
 title: "Resume"
 ---
 
+
+
 # Education
 
 ### Columbia University Mailman School of Public Health (May 2023)
@@ -27,5 +29,35 @@ title: "Resume"
 * GPA: 3.9
 * Exchange year, took graduate-level public health classes
 
+
+# Experience
+
+### Columbia University Mailman School of Public Health (Summer 2022)
+*New York, NY*
+
+**Research Assistant**
+
+* Conducted literature research using Pubmed and Law Atlas and co-wrote the significance section of 3 grant proposals on substance use and health policies to obtain funding for separate research projects
+* Spearheaded a self-conceived independent research topic investigating complex survey data from the National Survey of Drug Use and Health with R and SAS
+
+### The University of Hong Kong School of Public Health 
+*Hong Kong*
+
+**Student Research Assistant (Summer 2021)**
+
+* Wrangled Hong Kong COVID-19 case data from the Centre for Health Protection with Excel to infer 1,800 transmission pairs from over 5,000 cases which were used as a preface for 3 in-depth research projects
+* Accurately communicated findings by co-authoring 3 manuscripts for publication in epidemiological journals and creating figures for visualization after analysis with R. Received 37 citations and ≥ 5,000 views
+
+**Student Research Assistant (Summer 2020)**
+
+* Generated search algorithm on Pubmed, collected and analyzed data from over 400 articles with Excel and R, created visuals figures and reported findings by writing a published journal article. Received 12 citations and 1,600 views
+
+### Being Patient
+*Virtual*
+
+**Summer Intern**
+
+* Designed a curriculum for a proposed online course on dementia for the 40,000 members and created modules with content and visuals from research articles using precise and concise language with Keynote
+* Authored an article on the platform by reporting findings from a scientific journal in a simplified manner, receiving the most engagement on the platform since 2020
 
 Click [here](Amy Yeung Resume.pdf) for my full resume.
