added leadership section

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -60,4 +60,23 @@ title: "Resume"
 * Designed a curriculum for a proposed online course on dementia for the 40,000 members and created modules with content and visuals from research articles using precise and concise language with Keynote
 * Authored an article on the platform by reporting findings from a scientific journal in a simplified manner, receiving the most engagement on the platform since 2020
 
+# Leadership
+
+### Bloom Mentoring (Jan 2022 - Present)
+*New York, NY*
+
+**Vice President, Columbia University Mailman School of Public Health Chapter**
+
+* Successfully implemented 3 campus events in compliance with university rules by organizing meetings and unifying ideas from board members. Increased membership by 83%, increased social media engagement by 300% 
+* Partnered with other school organizations and external stakeholders to organize a collaborative event series focused on promoting menstrual equity to students
+
+### AIESEC in HKU (June 2018 - May 2019)
+*Hong Kong*
+
+**Manager of Talent Management, The University of Hong Kong Chapter**
+
+* Organized 4 recruitment talks, led the interview and selection process from over 200 candidates to over 30 members, and facilitated an induction camp to introduce members to organizational and chapter goals
+* Supervised my team of 6 members to facilitate monthly events and coaching sessions to boost organizational knowledge, raise social awareness and empower members in alignment with the targets set by the Vice President
+
+
 Click [here](Amy Yeung Resume.pdf) for my full resume.
