--- a/publication.Rmd
+++ b/publication.Rmd
@@ -4,3 +4,8 @@ title: "Publications"
 
 Here is a compilation of publications that I have been involved in:
 
+**Research articles:**
+
+* [The incubation period distribution of coronavirus disease 2019 (COVID-19): a systematic review and meta-analysis](https://academic.oup.com/cid/article/73/12/2344/6297425?login=true)
+* [Serial intervals and case isolation delays for COVID-19: a systematic review and meta-analysis](https://academic.oup.com/cid/article/74/4/685/6284329?login=true)
+* [COVID-19 transmission in Hong Kong despite universal masking](https://pubmed.ncbi.nlm.nih.gov/33895227/)
