added other articles

--- a/publication.Rmd
+++ b/publication.Rmd
@@ -9,3 +9,7 @@ Here is a compilation of publications that I have been involved in:
 * [The incubation period distribution of coronavirus disease 2019 (COVID-19): a systematic review and meta-analysis](https://academic.oup.com/cid/article/73/12/2344/6297425?login=true)
 * [Serial intervals and case isolation delays for COVID-19: a systematic review and meta-analysis](https://academic.oup.com/cid/article/74/4/685/6284329?login=true)
 * [COVID-19 transmission in Hong Kong despite universal masking](https://pubmed.ncbi.nlm.nih.gov/33895227/)
+
+**Other articles:**
+
+* [First FDA-Approved Diagnostic Agent to Detect Tau Tangles in Alzheimer’s Patients](https://www.beingpatient.com/first-fda-approved-diagnostic-agent-to-detect-tau-tangles-in-alzheimers-patients/?fbclid=IwAR2_hl1YvQu6tnSGVoEy8Elr3oRKoXGQcKT0piYdZvONlEWGvMqQk_72hfU)
