added TA position in leadership section

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -66,6 +66,14 @@ title: "Resume"
 
 # Leadership
 
+### Columbia University Mailman School of Public Health (Fall 2022)
+*New York, NY*
+
+**Teaching Assistant - Research Methods & Application (Quantitative section)**
+
+* Facilitated the learning of over 19 students by hosting weekly lab sessions, grading homework and hosting office hours
+* Collected feedback from students and effectively relayed comments to the instructor team
+
 ### Bloom Mentoring (Jan 2022 - Present)
 *New York, NY*
 
